// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`method "createAggregateIdExpression" should return correctly expression for many eventTypes 1`] = `
Object {
  "attributeNames": Object {
    "#type": "type",
  },
  "attributeValues": Object {
    ":eventType0": "type1",
    ":eventType1": "type2",
  },
  "conditionExpression": "(#type IN (:eventType0,:eventType1))",
}
`;

exports[`method "createAggregateIdExpression" should return correctly expression for single eventType 1`] = `
Object {
  "attributeNames": Object {
    "#type": "type",
  },
  "attributeValues": Object {
    ":eventType0": "type1",
  },
  "conditionExpression": "(#type = :eventType0)",
}
`;

exports[`method "createAggregateIdExpression" should return empty expression 1`] = `
Object {
  "attributeNames": Object {},
  "attributeValues": Object {},
  "conditionExpression": "",
}
`;
